savein be4 trying to upload UserRecord
trying to upload UserRecord to mongo db ,so far the code uploads only item objects .

--- a/RealmTodo/Views/ItemViews/EditItemPage.xaml
+++ b/RealmTodo/Views/ItemViews/EditItemPage.xaml
@@ -3,12 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RealmTodo.Views.EditItemPage"
              xmlns:vm="clr-namespace:RealmTodo.ViewModels"
-             Title="Create or Modify an Item"
+             Title="C99reate or Modify an Item"
                 >
-     <ContentPage.BindingContext>
+    <ContentPage.BindingContext>
         <vm:EditItemViewModel />
     </ContentPage.BindingContext>
-     <VerticalStackLayout Padding="10" Spacing="20">
+    <VerticalStackLayout Padding="10" Spacing="20">
         <Label 
             Text="{Binding PageHeader}"
             VerticalOptions="Center" 
