added AddDog method
changes that I made in the project regrading Dog class:
1)I added Dong class to my project .
2)I also added in the EditItemViewModel.cs file the method AddDog .
3) In the EditItemPage.xaml insted to AddItemCommand I wrote the method AddDogCommand that should add Dog class to realm.

--- a/RealmTodo/Views/ItemViews/EditItemPage.xaml
+++ b/RealmTodo/Views/ItemViews/EditItemPage.xaml
@@ -16,7 +16,9 @@
             TextColor="{DynamicResource Primary}"/>
         <Entry Text="{Binding Summary}" Placeholder="Item Summary"  PlaceholderColor="#787878"/>
         <HorizontalStackLayout HorizontalOptions="Center" >
-            <Button  Margin="0,0,20,0" Text="OK" Command="{Binding SaveItemCommand}"/>
+            <!-- TODO this new method that adds Dog object to realm -->
+
+            <Button  Margin="0,0,20,0" Text="OK" Command="{Binding AddDogCommand}"/>
             <Button  BackgroundColor="#454556"
                     Text="Cancel" Command="{Binding CancelCommand}"/>
         </HorizontalStackLayout>
