added dog class
I finally added the dog class to mongo db , look for : new method-used for adding Dog class to see the method that are updated for adding dog class .

--- a/RealmTodo/Views/ItemViews/EditItemPage.xaml
+++ b/RealmTodo/Views/ItemViews/EditItemPage.xaml
@@ -18,7 +18,7 @@
         <HorizontalStackLayout HorizontalOptions="Center" >
             <!-- TODO this new method that adds Dog object to realm -->
 
-            <Button  Margin="0,0,20,0" Text="OK" Command="{Binding AddDogCommand}"/>
+            <Button  Margin="0,0,20,0" Text="OK" Command="{Binding SaveDogCommand}"/>
             <Button  BackgroundColor="#454556"
                     Text="Cancel" Command="{Binding CancelCommand}"/>
         </HorizontalStackLayout>
