--- a/RealmTodo/Views/ItemViews/EditDogPage.xaml
+++ b/RealmTodo/Views/ItemViews/EditDogPage.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RealmTodo.Views.EditItemPage"
+             x:Class="RealmTodo.Views.EditDogPage"
              xmlns:vm="clr-namespace:RealmTodo.ViewModels"
-             Title="C99reate or Modify an Item"
+             Title="Add Dog to cloud"
                 >
     <ContentPage.BindingContext>
         <vm:EditItemViewModel />
@@ -14,11 +14,11 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center"
             TextColor="{DynamicResource Primary}"/>
-        <Entry Text="{Binding Summary}" Placeholder="Item Summary"  PlaceholderColor="#787878"/>
+        <Entry Text="{Binding Summary}" Placeholder="Dog Summary"  PlaceholderColor="#787878"/>
         <HorizontalStackLayout HorizontalOptions="Center" >
             <!-- TODO this new method that adds Dog object to realm -->
 
-            <Button  Margin="0,0,20,0" Text="OK" Command="{Binding SaveItemCommand}"/>
+            <Button  Margin="0,0,20,0" Text="OK" Command="{Binding SaveDogCommand}"/>
             <Button  BackgroundColor="#454556"
                     Text="Cancel" Command="{Binding CancelCommand}"/>
         </HorizontalStackLayout>
