--- a/RealmTodo/Views/ItemViews/EditMapPinPage.xaml
+++ b/RealmTodo/Views/ItemViews/EditMapPinPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RealmTodo.Views.EditItemPage"
+             x:Class="RealmTodo.Views.EditMapPinPage"
              xmlns:vm="clr-namespace:RealmTodo.ViewModels"
-             Title="C99reate or Modify an Item"
+             Title="Add MapPin to cloud"
                 >
     <ContentPage.BindingContext>
-        <vm:EditItemViewModel />
+        <vm:EditMapPinViewModel />
     </ContentPage.BindingContext>
     <VerticalStackLayout Padding="10" Spacing="20">
         <Label 
@@ -14,16 +14,18 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center"
             TextColor="{DynamicResource Primary}"/>
-        <Entry Text="{Binding Summary}" Placeholder="Item Summary"  PlaceholderColor="#787878"/>
+        <Entry Text="{Binding Summary}" Placeholder="MapPin Summary"  PlaceholderColor="#787878"/>
         <HorizontalStackLayout HorizontalOptions="Center" >
-            <!-- TODO this new method that adds Dog object to realm -->
+            <!-- TODO this new method that adds MapPin object to realm -->
 
-            <Button  Margin="0,0,20,0" Text="OK" Command="{Binding SaveItemCommand}"/>
+            <Button  Margin="0,0,20,0" Text="OK" Command="{Binding SaveMapPinCommand}"/>
             <Button  BackgroundColor="#454556"
                     Text="Cancel" Command="{Binding CancelCommand}"/>
 
-            <Button  BackgroundColor="Red"
-                    Text="Print" Command="{Binding PrintItemSummaryCommand}"/>
+            <Button  BackgroundColor="Purple"
+                    Text="Print" Command="{Binding PrintMapNameCommand}"/>
+
+
         </HorizontalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
