--- a/RealmTodo/Views/DogViews/DogsPage.xaml
+++ b/RealmTodo/Views/DogViews/DogsPage.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RealmTodo.Views.ItemsPage"
+             x:Class="RealmTodo.Views.DogsPage"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:vm="clr-namespace:RealmTodo.ViewModels"
              BackgroundColor="#E3FCF7"
-             x:Name="itemsPage">
+             x:Name="dogsPage">
     <ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior
             EventName="Appearing"
@@ -46,7 +46,7 @@
                     VerticalOptions="Center" 
                     IsToggled="{Binding IsShowAllTasks}" />
         </StackLayout>
-        <ListView ItemsSource="{Binding Items}"
+        <ListView ItemsSource="{Binding Dogs}"
                   SelectionMode="None"
                   Grid.Row="1"
                   BackgroundColor="White">
@@ -61,10 +61,10 @@
                                          HorizontalOptions="FillAndExpand" 
                                          VerticalOptions="Center">
                                 <StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding Path=BindingContext.EditItemCommand, Source={x:Reference itemsPage}}"
+                                    <TapGestureRecognizer Command="{Binding Path=BindingContext.EditDogCommand, Source={x:Reference dogsPage}}"
                                                           CommandParameter="{Binding .}"/>
                                 </StackLayout.GestureRecognizers>
-                                <Label Text="{Binding Summary}"
+                                <Label Text="{Binding Name}"
                                        HorizontalOptions="FillAndExpand"
                                        VerticalOptions="Center"/>
                                 <Label Text="(mine)"
@@ -78,7 +78,7 @@
                                     BackgroundColor="Transparent"
                                     VerticalOptions="Center" 
                                     HorizontalOptions="End"
-                                    Command="{Binding Path=BindingContext.DeleteItemCommand, Source={x:Reference itemsPage}}"
+                                    Command="{Binding Path=BindingContext.DeleteDogCommand, Source={x:Reference dogsPage}}"
                                     CommandParameter="{Binding .}"
                                     IsEnabled="{Binding IsMine}" />
                         </StackLayout>
