added MapsViewModel and EditMapsViewmodel file
need to fix problem that the mappin objects in the maps list is not deleted .

--- a/RealmTodo/AppShell.xaml
+++ b/RealmTodo/AppShell.xaml
@@ -21,6 +21,13 @@
         ContentTemplate="{DataTemplate local:DogsPage}"
         Route="dogs" />
 
+    <ShellContent
+    Title="MapsList"
+    ContentTemplate="{DataTemplate local:MapsPage}"
+    Route="maps" />
+
+
+
 
 </Shell>
 
