updated the code
I updated the code so that the type of object that is seen in the main page can be set by  changing the singlton type in the LoginPage(need to change the type of singlton ) and in the LoginViewModel (need to choose the correct list_of_ ) . How ever I still have problem that I can not see diffrent object type in the list that is diffrent from what was defined first at the login page,need to fix this problem .

--- a/RealmTodo/AppShell.xaml
+++ b/RealmTodo/AppShell.xaml
@@ -14,17 +14,17 @@
     <ShellContent
         Title="ItemList"
         ContentTemplate="{DataTemplate local:ItemsPage}"
-        Route="items" />
+        Route="list_of_items" />
 
     <ShellContent
         Title="DogList"
         ContentTemplate="{DataTemplate local:DogsPage}"
-        Route="dogs" />
+        Route="list_of_dogs" />
 
     <ShellContent
     Title="MapsList"
     ContentTemplate="{DataTemplate local:MapsPage}"
-    Route="maps" />
+    Route="list_of_maps" />
 
 
 
