updated to code
I removed page login as singlton and updated the rest of the code .

--- a/RealmTodo/Views/MapPinViews/EditMapPinPage.xaml
+++ b/RealmTodo/Views/MapPinViews/EditMapPinPage.xaml
@@ -23,7 +23,7 @@
                     Text="Cancel" Command="{Binding CancelCommand}"/>
 
             <Button  BackgroundColor="Purple"
-                    Text="PrintMaps" Command="{Binding GoToMapsPageCommand}"/>
+                    Text="ListOfMaps" Command="{Binding GoToMapsPageCommand}"/>
 
 
         </HorizontalStackLayout>
